syntax = "proto3";

package example;
option go_package = "go;proto";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "common.proto";
import "user.proto";
import "item.proto";

message GetUsersAndItemsResponse {
  repeated GetUserResponse users = 1;
  repeated GetItemResponse items = 2;
}

message PostUsersAndItemsRequest {
  repeated PostUserRequest users = 1;
  repeated PostItemRequest items = 2;
}

service MainService {
  rpc GetUsersAndItems (google.protobuf.Empty) returns (GetUsersAndItemsResponse) {
    option (google.api.http) = {
      get: "/v1/users_and_items"
    };
  }

  rpc PostUsersAndItems (PostUsersAndItemsRequest) returns (SimpleApiResponse) {
    option (google.api.http) = {
      post: "/v1/users_and_items"
      body: "*"
    };
  }
}
